2000-12-13  Rob Browning  <rlb@cs.utexas.edu>

	* src/scm/text-export.scm: kill pointer-token*

	* src/scm/report/transaction-report.scm: minor formatting changes.

	* src/scm/report/taxtxf.scm: kill pointer-token*

	* src/scm/report/folio.scm: use new g-wrap enum support.

	* src/scm/report/budget-report.scm:
	disable report until we fix the enumeration usage.

	* src/scm/report/balance-and-pnl.scm: kill pointer-token*

	* src/scm/report/average-balance.scm: minor formatting changes.

	* src/scm/report-utilities.scm: kill pointer-token*
	(gnc:account-has-shares?): use new g-wrap enum support.

	* src/scm/qif-import/qif-to-gnc.scm: kill pointer-token*

	* src/scm/qif-import/qif-parse.scm:
	delete unusd gif-parse:print-acct-type

	* src/scm/qif-import/qif-guess-map.scm: kill pointer-token*

	* src/scm/main.scm
	(gnc:main): add handle-batch-mode-item so --evaluate works.

	* src/scm/engine-interface.scm: kill pointer-token*.

	* src/scm/c-interface.scm: kill pointer-token*.

	* src/quotes/gnc-prices-2.in: various small fixes (big ones later).

	* src/optional/swig/.cvsignore: add Makefile Makefile.in

	* src/guile/option-util.c
	(gnc_option_db_register_change_callback): update for new g-wrap.

	* src/guile/guile-util.c
	(gnc_copy_split): update for new g-wrap.
	(gnc_copy_split_scm_onto_split): update for new g-wrap.
	(gnc_copy_trans): update for new g-wrap.
	(gnc_copy_trans_scm_onto_trans_swap_accounts): update for new g-wrap.
	(gnc_glist_account_ptr_to_scm): use gnc_glist_to_scm_list.
	(gnc_scm_to_glist_account_ptr): use gnc_scm_list_to_glist.
	(gnc_scm_to_commodity): update for new g-wrap.
	(gnc_commodity_to_scm): update for new g-wrap.
	(gnc_glist_string_to_scm): double speed - use stack.
	(gnc_scm_to_glist_string): don't reverse result.
	(gnc_glist_commodity_ptr_to_scm): update for new g-wrap.
	use gnc_glist_to_scm_list.
	(gnc_scm_to_glist_commodity_ptr): use gnc_scm_list_to_glist.

	* src/guile/gnucash.c.in